[TYCHE-43] fix merge request comments